# libigl-example-project

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  main.cpp
imgui/: ImGuiMenu.cpp  ImGuiMenu.h  ImGuiPlugin.cpp  ImGuiPlugin.h  ImGuiWidget.h  ImGuizmoWidget.cpp  ImGuizmoWidget.h  SelectionWidget.cpp  SelectionWidget.h  imgui_fonts_droid_sans.h
src/: CADWidget.cpp  CADWidget.h  IMesher.cpp  IMesher.h  MeshInspector.cpp  MeshInspector.h  NetgenMesher.cpp  NetgenMesher.h  OCCMesher.cpp  OCCMesher.h  main.cpp
src/copyleft/: IsotropicRemesh.cpp  IsotropicRemesh.h  SurfaceDelaunayRemesh.cpp  SurfaceDelaunayRemesh.h
